# PaDEL_pywrapper

./: .gitignore  README.md  setup.cfg  tox.ini
java/: README.md
java/src/ePaDEL/src/epadel/: Main.java
java/src/extendedlibpadeldescriptor/: eCDK_AtomPairs2DFingerprintCount.java  eCDK_AtomPairs2DFingerprinter.java  eCDK_EStateFingerprinter.java  eCDK_ExtendedFingerprinter.java  eCDK_Fingerprinter.java  eCDK_GraphOnlyFingerprinter.java  eCDK_KlekotaRothFingerprintCount.java  eCDK_KlekotaRothFingerprinter.java  eCDK_MACCSFingerprinter.java  eCDK_PubchemFingerprinter.java  eCDK_SubstructureFingerprintCount.java  eCDK_SubstructureFingerprinter.java
java/src/extendedlibpadeldescriptor/src/extendedlibpadeldescriptor/: eCDK_AtomPairs2DFingerprintCount.java  eCDK_AtomPairs2DFingerprinter.java  eCDK_EStateFingerprinter.java  eCDK_ExtendedFingerprinter.java  eCDK_Fingerprinter.java  eCDK_GraphOnlyFingerprinter.java  eCDK_IFingerprint.java  eCDK_KlekotaRothFingerprintCount.java  eCDK_KlekotaRothFingerprinter.java  eCDK_MACCSFingerprinter.java  eCDK_PubchemFingerprinter.java  eCDK_SubstructureFingerprintCount.java  eCDK_SubstructureFingerprinter.java
src/PaDEL_pywrapper/: __init__.py  descriptor.py  descriptors.py  padel_descs.tsv  padel_fps.tsv  padel_wrapper.py  utils.py
src/PaDEL_pywrapper/PaDEL-Descriptor/: Descriptors.xls  descriptors.xml
tests/: __init__.py  constants.py  test_fingerprints.py  test_version.py
