[metadata]
name = PaDEL_pywrapper
version = attr: PaDEL_pywrapper.__version__
description = Python wrapper for the PaDEL descriptors
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/OlivierBeq/PaDEL_pywrapper

author = Olivier J. M. Béquignon
author_email = "olivier.bequignon.maintainer@gmail.com"
maintainer = Olivier J. M. Béquignon
maintainer_email = "olivier.bequignon.maintainer@gmail.com"

license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

keywords =
    PaDEL
    molecular descriptors
    cheminformatics
    QSAR

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    more-itertools
    numpy
    pandas
    rdkit
    install-jdk==0.3.0
    bounded-pool-executor==0.0.3

[options.packages.find]
where = src

[options.package_data]
* = PaDEL-Descriptor/*, PaDEL-Descriptor/*/*, *.tsv

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest